# indiancoin

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  indiancoin-cli.bash-completion  indiancoin-qt.pro  indiancoin-tx.bash-completion  indiancoind.bash-completion  install_db4.sh  valgrind.supp
contrib/debian/: README.md  changelog  control  indiancoin-qt.desktop  indiancoin-qt.install  indiancoin-qt.lintian-overrides  indiancoin-qt.manpages  indiancoin-qt.protocol  indiancoind.bash-completion  indiancoind.examples  indiancoind.install  indiancoind.lintian-overrides  indiancoind.manpages  indiancoind.postinst  indiancoind.postrm  indiancoind.service  rules  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  gen-manpages.sh  logprint-scanner.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: README.md  indiancoind.conf  (+5 more)
depends/: README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  concurrentqueue.h  core_io.h  (+114 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  governancepage.cpp  governancepage.h  guiconstants.h  guiutil.cpp  guiutil.h  indiancoin.cpp  indiancoin.qrc  indiancoin_locale.qrc  indiancoinstrings.cpp  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  (+40 more)
src/qt/forms/: addressbookpage.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui  zindcontroldialog.ui
src/qt/indiancoin/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  coincontrolindwidget.cpp  coincontrolindwidget.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  denomgenerationdialog.cpp  denomgenerationdialog.h  expandablebutton.cpp  expandablebutton.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  indiancoingui.cpp  indiancoingui.h  loadingdialog.cpp  (+59 more)
src/qt/indiancoin/forms/: addresseswidget.ui  coincontrolindwidget.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  privacywidget.ui  receivewidget.ui  requestdialog.ui  send.ui  sendconfirmdialog.ui  topbar.ui  txrow.ui  welcomecontentwidget.ui
src/qt/indiancoin/res/css/: style_dark.css  style_light.css
src/qt/indiancoin/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/indiancoin/settings/forms/: settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingswidget.ui
src/qt/locale/: indiancoin_bg.ts  indiancoin_ca.ts  indiancoin_cs.ts  indiancoin_da.ts  indiancoin_de.ts  indiancoin_en.ts  indiancoin_en_GB.ts  indiancoin_en_US.ts  indiancoin_eo.ts  indiancoin_es.ts  indiancoin_es_ES.ts  indiancoin_fi.ts  indiancoin_fr_FR.ts  indiancoin_hi_IN.ts  indiancoin_hr.ts  indiancoin_hr_HR.ts  indiancoin_it.ts  indiancoin_ja.ts  indiancoin_ko_KR.ts  indiancoin_lt_LT.ts  indiancoin_nl.ts  indiancoin_pl.ts  indiancoin_pt.ts  indiancoin_pt_BR.ts  indiancoin_ro_RO.ts  indiancoin_ru.ts  indiancoin_sk.ts  indiancoin_sv.ts  indiancoin_tr.ts  indiancoin_uk.ts  indiancoin_vi.ts  indiancoin_zh_CN.ts  indiancoin_zh_TW.ts
src/qt/res/: indiancoin-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
test/: README.md
(+300 files in other folders)
